fix nav icon too large on narrow and small screen

--- a/src/app/nav/nav.component.css
+++ b/src/app/nav/nav.component.css
@@ -14,9 +14,9 @@ mat-icon {
     padding: 0 10px;
     color: #ffffff;
     opacity: 0.5;
-    font-size: 50px;
-    width: 50px;
-    height: 50px;
+    font-size: max(min(7vw, 50px), 25px);
+    width: max(min(7vw, 50px), 25px);
+    height: max(min(7vw, 50px), 25px);
     cursor: pointer;
 }
 
